--- a/10_representanteSala.html
+++ b/10_representanteSala.html
@@ -8,9 +8,21 @@
     */
 
     //ENTRADA
+    let representantes = [];
+    let alunos = [0, 0, 0];
 
 
     //PROCESSAMENTO
+    for(let i = 1; i<= 3; i++) {
+        const candidato = prompt(`informe o nome do ${i} candidato.`);
+        representantes.push(candidato);
+    }
+   
+     const alun = Number(prompt(`informe a quantidade de alunos votantes.`));
+     for(let i = 1; i<= alun; i++) {
+        const voto = Number(`informe o voto(${candidatos[0]},`)
+     }
+    
 
 
     //SAÍDA
