--- a/02_mediaDoAluno.html
+++ b/02_mediaDoAluno.html
@@ -13,7 +13,7 @@
     //PROCESSAMENTO
     for(let itens = 0; itens <= notas; itens++) {
         const nota = Number(prompt(`informe a nota ${itens}`));
-        somar = somar + notas
+        somar = somar + nota
     }
 
     
