--- a/10_representanteSala.html
+++ b/10_representanteSala.html
@@ -8,20 +8,16 @@
     */
 
     //ENTRADA
-    let representantes = [];
-    let alunos = [0, 0, 0];
-
-
+    let votos = Number(prompt(`informe a quantidade de alunos votantes.`));
+   
     //PROCESSAMENTO
-    for(let i = 1; i<= 3; i++) {
-        const candidato = prompt(`informe o nome do ${i} candidato.`);
-        representantes.push(candidato);
+    for(i = 1; i <= 3; i++){
+        const candidato = prompt(`informe o nome do ${i} candidato.`)
+    }
+    for( i = 1; i <= votos; i++){
+        
     }
    
-     const alun = Number(prompt(`informe a quantidade de alunos votantes.`));
-     for(let i = 1; i<= alun; i++) {
-        const voto = Number(`informe o voto(${candidatos[0]},`)
-     }
     
 
 
