--- a/08_somaemedia.html
+++ b/08_somaemedia.html
@@ -6,11 +6,16 @@
     */
 
     //ENTRADA
-
-
+    let somar = 0; 
+    let divisor = 0;
     //PROCESSAMENTO
+    for (let i = 1; i <= 5;i++ ){
+        const numero = Number(prompt(`informe o número ${i}`))
+        somar = somar + numero
+        divisor++
+    }
 
-
+    document.write(`soma = ${somar} <br> média = ${somar/divisor}`);
     //SAÍDA
 
 </script>
