--- a/05_validarNumeroPrimo.html
+++ b/05_validarNumeroPrimo.html
@@ -7,8 +7,20 @@
 
     //ENTRADA
     const numero = Number(prompt(`informe um número.`));
+    let divisor = 0;
 
     //PROCESSAMENTO
+    for(let i = 1; i <= numero; i++) {
+        if( numero % i == 0 ){
+            divisor++
+        }
+    }
+    if(divisor <= 2){
+        document.write(`${numero} é primo`)
+    }
+    else{
+        document.write(`${numero} não é primo`)
+    }
 
 
     //SAÍDA
