--- a/12_investimentos.html
+++ b/12_investimentos.html
@@ -5,11 +5,12 @@
     */
 
     //ENTRADA
+    inv = 1000;
+    let dias = 0;
+    for(dias = 0; inv <= 2000; dias++){
+        inv = inv * 1.02;
+    }
+    alert(`Demorou ${dias} dias para alcancar os R$${inv.toFixed(2)} de investimento`);
 
-
-    //PROCESSAMENTO
-
-
-    //SAÍDA
 
 </script>
